--- a/index.html
+++ b/index.html
@@ -5,45 +5,72 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>hh</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" async></script>
 	<link rel="stylesheet" href="style.css" />
-    <script src="test_task_resources/feedback_data.json" defer></script>
-    <script src="app.js" defer></script>
+    <script src="feedback/feedback.js" async></script>
+    <script src="blogpost/blogpost.js" async></script>
 </head>
 <body>
 <body>
-    <div class="container-fluid p-0">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col">
-                <p>
-                    "Combin is exactly the tool I was looking for. Unlike many other applications, it gives you a real control over the automated actions — it’s you who chooses who to follow and what to like."
+            <div class="col-xs-12 col-lg-8">
+                <p class="feedback"></p>
+                <p class="name">
+                    <span></span><span><br></span>
+                    <span></span>
                 </p>
-                <p>
-                    Jesus Requena<br><span>Director of Growth Marketing</span>
-                </p>
-                <button class="left-btn p-0"></button><button class="right-btn p-0"></button>
+            </div>
+            <div class="col-xs-12 col-lg-4">
+                <div class="picture">
+                    <svg viewBox="0 0 388 388" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.1" cx="194" cy="194" r="194" fill="url(#paint0_linear)"/>
+                        <defs>
+                            <linearGradient id="paint0_linear" x1="29.4345" y1="354.552" x2="307.724" y2="41.4759" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="white"/>
+                                <stop offset="1" stop-color="white" stop-opacity="0"/>
+                            </linearGradient>
+                        </defs>
+                    </svg>
+                </div>
+                <div class="feedback-buttons">
+                    <button class="left-btn p-0"></button><button class="right-btn p-0"></button>
+                </div>
+                
             </div>
         </div>
         <div class="row">
             <div class="col text-center">What's New?</div>
         </div>
         <div class="row text-center">
-            <div class="col-12 p-0">
+            <div class="col-xs-12 col-lg-4">
                 <a href="https://blog.combin.com/instagram-faq-all-you-need-to-know-bb2559ac606b" target="_blank">
-                    <img src="test_task_resources/static/image/mobile/img1.png" alt="">
-                    <p class="title">Instagram FAQ — All You Need To Know</p>
+                    <picture>
+                        <source srcset="test_task_resources/static/image/desktop/img1.png 1x, test_task_resources/static/image/desktop/img1@2x.png 2x, test_task_resources/static/image/desktop/img1@3x.png 3x" media="(min-width: 992px)">
+                        <source srcset="test_task_resources/static/image/mobile/img1.png 1x, test_task_resources/static/image/mobile/img1@2x.png 2x, test_task_resources/static/image/mobile/img1@3x.png 3x" media="(max-width: 991.99px)">
+                        <img src="test_task_resources/static/image/mobile/img1.png"  alt="">
+                    </picture>
+                    <p>Instagram FAQ — All You Need To Know</p>
                 </a>
             </div>
-            <div class="col-12 p-0">
+            <div class="col-xs-12 col-lg-4">
                 <a href="https://blog.combin.com/dmexco-2019-meet-combin-in-cologne-b845529a1e63" target="_blank">
-                    <img src="test_task_resources/static/image/mobile/img2.png" alt="">
-                    <p class="title">DMEXCO 2019 — Meet Combin in Cologne</p>
+                    <picture>
+                        <source srcset="test_task_resources/static/image/desktop/img2.png 1x, test_task_resources/static/image/desktop/img2@2x.png 2x, test_task_resources/static/image/desktop/img2@3x.png 3x" media="(min-width: 992px)">
+                        <source srcset="test_task_resources/static/image/mobile/img2.png 1x, test_task_resources/static/image/mobile/img2@2x.png 2x, test_task_resources/static/image/mobile/img2@3x.png 3x" media="(max-width: 991.99px)">
+                        <img src="test_task_resources/static/image/mobile/img2.png"  alt="">
+                    </picture>
+                    <p>DMEXCO 2019 — Meet Combin in Cologne</p>
                 </a>
             </div>
-            <div class="col-12 p-0">
+            <div class="col-xs-12 col-lg-4">
                 <a href="https://blog.combin.com/limits-display-new-user-preview-new-filters-and-many-more-features-all-about-combin-2-1-d78713383da7" target="_blank">
-                    <img src="test_task_resources/static/image/mobile/post3.png" alt="">
-                    <p class="title">Limits Display, New User Preview, New Filters, and Many More Features — All about Combin 2.1</p>
+                    <picture>
+                        <source srcset="test_task_resources/static/image/desktop/img3.png 1x, test_task_resources/static/image/desktop/img3@2x.png 2x, test_task_resources/static/image/desktop/img3@3x.png 3x" media="(min-width: 992px)">
+                        <source srcset="test_task_resources/static/image/mobile/img3.png 1x, test_task_resources/static/image/mobile/img3@2x.png 2x, test_task_resources/static/image/mobile/img3@3x.png 3x" media="(max-width: 991.99px)">
+                        <img src="test_task_resources/static/image/mobile/img3.png"  alt="">
+                    </picture>
+                    <p>Limits Display, New User Preview, New Filters, and Many More Features — All about Combin 2.1</p>
                 </a>
             </div>
         </div>
